--- a/style.css
+++ b/style.css
@@ -44,9 +44,13 @@ nav {
 }
 
 ul {
-  font-family: "JetBrains Mono", monospace;
   display: flex;
   gap: 64px;
+}
+
+ul li {
+  font-family: "JetBrains Mono", monospace;
+  font-size: 14px;
 }
 
 ul li a {
